--- a/app/src/global.css
+++ b/app/src/global.css
@@ -22,7 +22,7 @@
     --secondary-foreground: #ff5471;
 
     --muted: #1c1c1c;
-    --muted-foreground: #ada5bf;
+    --muted-foreground: #d0d0d0;
 
     --accent: #1c1c1c;
     --accent-foreground: #f5faff;
